tests/snapshots/snapshot__status_strip_compact_idle.snap
---
source: tests/snapshot.rs
expression: "render_strip(&strip, 120, 3)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[READY]  STT: local │ Lang:vi │ TTS:off │ Route:Speakers │ 0 pairs │ Audio:0s │ no charges │ 0:00                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
