tests/snapshots/snapshot__status_strip_compact_listening_tts_on.snap
---
source: tests/snapshot.rs
expression: "render_strip(&strip, 120, 3)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│[READY]  ● STT: local │ Lang:vi │ TTS:on │ Route:Speakers │ 7 pairs │ Audio:42s │ ~$0.017 │ 1:23                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
