tests/snapshots/snapshot__status_strip_compact_ram_warning.snap
---
source: tests/snapshot.rs
expression: rendered
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ● STT: local │ Lang:vi │ TTS:off │ Route:Speakers │ 10 pairs │ Audio:60s │ ~$0.024 │ 1:00 │ ⚠ RAM:600MB              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
