tests/snapshots/snapshot__status_strip_compact_restart_notice.snap
---
source: tests/snapshot.rs
expression: "render_strip(&strip, 120, 3)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ STT: idle │ Lang:vi │ TTS:off │ 0 pairs │ Audio:0s │ $0.0000 │ 0:00 │ ⚠ restart req'd                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
