tests/snapshots/snapshot__status_strip_compact_sending.snap
---
source: tests/snapshot.rs
expression: "render_strip(&strip, 120, 3)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ◌ STT: sending │ Lang:vi │ TTS:off │ Route:Speakers │ 3 pairs │ Audio:15s │ ~$0.006 │ 0:30                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
