tests/snapshots/snapshot__status_strip_compact_waiting.snap
---
source: tests/snapshot.rs
expression: "render_strip(&strip, 120, 3)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ○ STT: local │ Lang:vi │ TTS:off │ Route:Speakers │ 5 pairs │ Audio:25s │ ~$0.010 │ 0:45                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
