tests/snapshots/snapshot__status_strip_expanded_idle.snap
---
source: tests/snapshot.rs
assertion_line: 342
expression: "render_strip(&strip, 80, 6)"
---
┌ Metrics ─────────────────────────────────────────────────────────────────────┐
│STT: idle   TTS: off                                                          │
│Target: vi   Pairs: 0   Cost: ~$0.000                                         │
│Elapsed: 0:00                                                                 │
│CPU:0%  RAM:0MB  Net:↑0/↓0 kbps  E2E:—  Loss:0.0%                             │
└──────────────────────────────────────────────────────────────────────────────┘
