tests/snapshots/snapshot__status_strip_expanded_listening.snap
---
source: tests/snapshot.rs
expression: "render_strip(&strip, 80, 5)"
---
┌ Metrics ─────────────────────────────────────────────────────────────────────┐
│● STT: listening   TTS: on                                                    │
│Target: vi   Pairs: 12   Cost: ~$0.072                                        │
│Elapsed: 3:00                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
