tests/snapshots/snapshot__status_strip_expanded_ram_warning.snap
---
source: tests/snapshot.rs
expression: rendered
---
┌ Metrics ─────────────────────────────────────────────────────────────────────┐
│● STT: listening   TTS: off   Route: Speakers                                 │
│Target: vi   Pairs: 10   Cost: ~$0.024                                        │
│Elapsed: 1:00                                                                 │
│CPU:45%  RAM:600MB  Net:↑8/↓32 kbps  E2E:420ms  Loss:0.0%                     │
│trunc:0%  flicker:0  mt:0                                                     │
│local CPU:0%  local inflight:0                                                │
│⚠ RAM warning: 600MB over budget; optional recording disabled                 │
└──────────────────────────────────────────────────────────────────────────────┘
