tests/snapshots/snapshot__status_strip_expanded_with_warning.snap
---
source: tests/snapshot.rs
expression: "render_strip(&strip, 80, height)"
---
┌ Metrics ─────────────────────────────────────────────────────────────────────┐
│[READY] ● STT: local   TTS: on   Route: Speakers                              │
│MT: idle                                                                      │
│Target: vi   Pairs: 20   Cost: ~$0.750                                        │
│Elapsed: 5:00                                                                 │
│CPU:12%  RAM:64MB  Net:↑8/↓32 kbps  E2E:420ms  Loss:0.0%                      │
│trunc:0%  flicker:0  mt:0                                                     │
│local CPU:0%  local inflight:0                                                │
│transcripts: —  audio archive: (consent revoked)                              │
│⚠ Cost warning: $0.75                                                         │
└──────────────────────────────────────────────────────────────────────────────┘
