tests/snapshots/snapshot__status_strip_narrow_abbreviated.snap
---
source: tests/snapshot.rs
expression: "render_strip(&strip, 60, 3)"
---
┌──────────────────────────────────────────────────────────┐
│[READY]  L/L | Lang:en | TTS:on/spk | 4p | ~$0.008 | 0:20 │
└──────────────────────────────────────────────────────────┘
